# advent-of-code

./: README.md  pyproject.toml
advent_of_code/: __init__.py  __main__.py  base.py  helpers.py  util.py
advent_of_code/y21/: __init__.py  day06.py  day19.py
advent_of_code/y23/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
advent_of_code_2023/: __main__.py  day01.py  helpers.py
notebooks/: 2021-19 Beacon Scanner.ipynb  2023-10 Pipe Maze.ipynb  2023-16 The Floor Will Be Lava.ipynb  2023-18 Lavaduct Lagoon.ipynb
notebooks/.ipynb_checkpoints/: 2021-19 Beacon Scanner-checkpoint.ipynb
tests/: test_01.py  test_advent_of_code.py  test_advent_of_code_2023.py  test_helpers.py
tests/y21/: test_06.py  test_19.py
tests/y23/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py  test_11.py  test_12.py  test_13.py  test_14.py  test_15.py  test_16.py  test_17.py  test_18.py  test_19.py  test_20.py  test_21.py  test_22.py  test_23.py  test_24.py  test_25.py
