[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions to https://adventofcode.com"
authors = ["Mikko Kouhia <mikko.kouhia@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
