[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions to https://adventofcode.com"
authors = ["Mikko Kouhia <mikko.kouhia@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.31.0"
shapely = "^2.0.2"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
numba = "^0.58.1"
networkx = "^3.2.1"
sympy = "^1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = {extras = ["jupyter"], version = "^23.11.0"}
pylint = "^3.0.2"
jupyter = "^1.0.0"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
